# SingleInstanceManager

./: CMakeLists.txt  LICENCE  README.md
src/: main.cpp
src/SingleInstanceManager/: SingleInstanceManager.cpp  SingleInstanceManager.hpp
